--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!doctype html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>CHH</title>
+</head>
+<body>
+  CHH test OK
+</body>
+</html>
