--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
-<html>
+<html lang="az">
 <head>
-  <meta charset="UTF-8">
-  <title>CHH</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>CHH Platform</title>
 </head>
-<body>
-  CHH test OK
+<body style="background:#3A3D4A;color:#fff;font-family:system-ui;padding:40px">
+  <h1>CHH işləyir ✅</h1>
+  <p>Əgər bunu görürsənsə, GitHub Pages düz qurulub.</p>
 </body>
 </html>
