--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html lang="az">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CHH Platform</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Crystal Haze Holding</title>
 </head>
-<body style="background:#3A3D4A;color:#fff;font-family:system-ui;padding:40px">
-  <h1>CHH işləyir ✅</h1>
-  <p>Əgər bunu görürsənsə, GitHub Pages düz qurulub.</p>
+<body style="background:#3A3D4A;color:#ffffff;font-family:Arial;padding:40px">
+
+  <h1>Crystal Haze Holding</h1>
+  <p>CHH platforması uğurla işləyir.</p>
+
 </body>
 </html>
