--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Crystal Haze Holding</title>
+
+  <!-- CSS mütləq qoşulur -->
+  <link rel="stylesheet" href="style.css">
 </head>
-<body style="background:#3A3D4A;color:#ffffff;font-family:Arial;padding:40px">
 
+<body>
   <h1>Crystal Haze Holding</h1>
-  <p>CHH platforması uğurla işləyir.</p>
-
+  <p>CHH platforması aktivdir.</p>
 </body>
 </html>
