--- a/index.html
+++ b/index.html
@@ -4,13 +4,72 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Crystal Haze Holding</title>
-
-  <!-- CSS mütləq qoşulur -->
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h1>Crystal Haze Holding</h1>
-  <p>CHH platforması aktivdir.</p>
+  <header class="header">
+    <div class="container">
+      <div class="logo">
+        <img src="assets/CHH logo.png" alt="CHH Logo">
+        <span>Crystal Haze Holding</span>
+      </div>
+    </div>
+  </header>
+
+  <main class="container">
+    <section class="section">
+      <h1>Crystal Haze Holding</h1>
+      <p>
+        Crystal Haze Holding bölmələr üzrə inkişaf edən daxili platformadır.
+        Məqsəd gənclərin intellektual, biznes, startap və idman sahələrində
+        təşkilatlanmış şəkildə inkişafını təmin etməkdir.
+      </p>
+    </section>
+
+    <section class="section">
+      <h2>Divisions</h2>
+
+      <div class="card">
+        <h3>Intellectual Division</h3>
+        <p><b>Kenan Abdullayev</b>, <b>Shabnam Zeynalova</b></p>
+      </div>
+
+      <div class="card">
+        <h3>Startup Division</h3>
+        <p><b>Narzin Guliyeva</b></p>
+      </div>
+
+      <div class="card">
+        <h3>Sports Division</h3>
+        <p><b>Ilham Fatullayev</b></p>
+      </div>
+
+      <div class="card">
+        <h3>Business Division</h3>
+        <p><b>Asmar Ibrahimzadeh</b></p>
+      </div>
+    </section>
+
+    <section class="section">
+      <h2>Heyksans Business Network (HBN)</h2>
+      <p>
+        HBN, Crystal Haze Holding altında fəaliyyət göstərən rəsmi brenddir.
+        Təhsil məzmunu, kitablar, test materialları və gələcəkdə
+        TreeYBuz adlı təhsil əsaslı süni intellekt sisteminin yaradılmasını hədəfləyir.
+      </p>
+    </section>
+
+    <section class="section">
+      <h2>Contact</h2>
+      <p>📞 055-441-74-23</p>
+      <p>📧 crystalhaze25.26@gmail.com</p>
+      <p>📷 Instagram: crystalhaze2025 / crystalhaze25.26</p>
+    </section>
+  </main>
+
+  <footer class="footer">
+    © Crystal Haze Holding
+  </footer>
 </body>
 </html>
